; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpegvideo_parser.c_mpegvideo_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpegvideo_parser.c_mpegvideo_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32, i32, %struct.MpvParseContext* }
%struct.MpvParseContext = type { i32 }
%struct.TYPE_9__ = type { i32 }

@PARSER_FLAG_COMPLETE_FRAMES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"pict_type=%d frame_rate=%0.3f repeat_pict=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, %struct.TYPE_9__*, i32**, i32*, i32*, i32)* @mpegvideo_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpegvideo_parse(%struct.TYPE_8__* %0, %struct.TYPE_9__* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca %struct.TYPE_9__*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.MpvParseContext*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %8, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 3
  %19 = load %struct.MpvParseContext*, %struct.MpvParseContext** %18, align 8
  store %struct.MpvParseContext* %19, %struct.MpvParseContext** %14, align 8
  %20 = load %struct.MpvParseContext*, %struct.MpvParseContext** %14, align 8
  %21 = getelementptr inbounds %struct.MpvParseContext, %struct.MpvParseContext* %20, i32 0, i32 0
  store i32* %21, i32** %15, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @PARSER_FLAG_COMPLETE_FRAMES, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %6
  %29 = load i32, i32* %13, align 4
  store i32 %29, i32* %16, align 4
  br label %45

30:                                               ; preds = %6
  %31 = load i32*, i32** %15, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = load i32, i32* %13, align 4
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %35 = call i32 @ff_mpeg1_find_frame_end(i32* %31, i32* %32, i32 %33, %struct.TYPE_8__* %34)
  store i32 %35, i32* %16, align 4
  %36 = load i32*, i32** %15, align 8
  %37 = load i32, i32* %16, align 4
  %38 = call i64 @ff_combine_frame(i32* %36, i32 %37, i32** %12, i32* %13)
  %39 = icmp slt i64 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %30
  %41 = load i32**, i32*** %10, align 8
  store i32* null, i32** %41, align 8
  %42 = load i32*, i32** %11, align 8
  store i32 0, i32* %42, align 4
  %43 = load i32, i32* %13, align 4
  store i32 %43, i32* %7, align 4
  br label %67

44:                                               ; preds = %30
  br label %45

45:                                               ; preds = %44, %28
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %48 = load i32*, i32** %12, align 8
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @mpegvideo_extract_headers(%struct.TYPE_8__* %46, %struct.TYPE_9__* %47, i32* %48, i32 %49)
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 2
  %53 = load i32, i32* %52, align 8
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @av_q2d(i32 %56)
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %59 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %58, i32 0, i32 1
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @ff_dlog(i32* null, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %53, i32 %57, i32 %60)
  %62 = load i32*, i32** %12, align 8
  %63 = load i32**, i32*** %10, align 8
  store i32* %62, i32** %63, align 8
  %64 = load i32, i32* %13, align 4
  %65 = load i32*, i32** %11, align 8
  store i32 %64, i32* %65, align 4
  %66 = load i32, i32* %16, align 4
  store i32 %66, i32* %7, align 4
  br label %67

67:                                               ; preds = %45, %40
  %68 = load i32, i32* %7, align 4
  ret i32 %68
}

declare dso_local i32 @ff_mpeg1_find_frame_end(i32*, i32*, i32, %struct.TYPE_8__*) #1

declare dso_local i64 @ff_combine_frame(i32*, i32, i32**, i32*) #1

declare dso_local i32 @mpegvideo_extract_headers(%struct.TYPE_8__*, %struct.TYPE_9__*, i32*, i32) #1

declare dso_local i32 @ff_dlog(i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @av_q2d(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
